--- a/Define-Service-Module/src/main/resources/application.yaml
+++ b/Define-Service-Module/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server:
       charset: UTF-8
       force-response: true
   port: ${PORT:8091}
-
+# Config for openapi------------------------------------
 springdoc:
   swagger-ui:
     enabled: true
@@ -13,7 +13,7 @@ springdoc:
   api-docs:
     path:  "/v3/api-docs"
     enabled: true
-
+#-------------------------------------------------------
 spring:
   application:
     name: module-one
@@ -31,8 +31,25 @@ spring:
     properties:
       hibernate:
         dialect: "org.hibernate.dialect.MySQLDialect"
+# Config for observability-----------------------------
+  mvc:
+    problemdetails:
+      enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+#-------------------------------------------------------
+
+# Config for http interface-----------------------------
 client:
   server-one:
     base-url: "http://localhost:8092"
   server-two:
     base-url: "http://localhost:8093"
+#-------------------------------------------------------
