--- a/Define-Service-Module/src/test/resources/application-test.yaml
+++ b/Define-Service-Module/src/test/resources/application-test.yaml
@@ -47,6 +47,11 @@ management:
       show-details: always
 #-------------------------------------------------------
 
+# Config for aws collection-----------------------------
+
+
+#-------------------------------------------------------
+
 # Config for http interface-----------------------------
 #client:
 #  server-one:
