--- a/Define-Service-Module/pom.xml
+++ b/Define-Service-Module/pom.xml
@@ -142,6 +142,26 @@
             <scope>test</scope>
         </dependency>
 <!--        Use for Observability purpose-->
+<!--        Use for aws localstack purpose-->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.450</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>1.12.450</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>localstack</artifactId>
+            <version>1.18.0</version>
+            <scope>test</scope>
+        </dependency>
+<!--        Use for aws localstack purpose-->
     </dependencies>
 
     <build>
