--- a/Define-Service-Module/pom.xml
+++ b/Define-Service-Module/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.0.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.6.Final</version>
+        </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -142,6 +148,26 @@
             <scope>test</scope>
         </dependency>
 <!--        Use for Observability purpose-->
+<!--        Use for aws localstack purpose-->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.450</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>1.12.450</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>localstack</artifactId>
+            <version>1.18.0</version>
+            <scope>test</scope>
+        </dependency>
+<!--        Use for aws localstack purpose-->
     </dependencies>
 
     <build>
